--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,8 @@
+
 .container{
-  background-color: #121215;
+  background: var(--background-color);
+  width: 100VW;
+  height: 100Vh;
 }
 
 .main {
