--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@200;400&family=Inter:wght@300;700&display=swap');
 
+:root {
+  --primary-color: white;
+  --secondary-color:  #636364;
+  --third-color: #27E88C;
+  --background-color: #121215; 
+}
+
 html,
 body {
   padding: 0;
@@ -8,13 +15,22 @@ body {
   font-family: 'Inter', Handjet, cursive;
 
 }
+span{
+  color: var(--secondary-color);
+}
+p,h1,h2,h3{
+  color: var(--primary-color);
+}
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
+span{
+  font-size: 10px;
+}
 * {
+  margin: 0;
   box-sizing: border-box;
 }
 
