--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,16 +1,31 @@
 
 .container{
   background: var(--background-color);
-  width: 100VW;
-  height: 100Vh;
+
 }
 
 .main {
   min-height: auto;
   padding: 1rem 1rem;
-  flex: 1;
   display: flex;
   flex-direction: row;
 
 }
 
+.left_side{
+  flex-grow: 0;
+  position: fixed;
+  display: block;
+  width: 22%;
+}
+
+.middle_side{
+  flex-grow: 5;
+  margin-left: 22%;
+}
+
+.right_side{
+  flex-grow: 1;
+  justify-content: flex-end;
+  width: 5% ;
+}
