--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,11 @@ span{
   margin: 0;
   box-sizing: border-box;
 }
-
+.profilepic{
+  margin: 12% 0;
+  width: 100%;
+  border-radius: 10px;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
