--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,9 +3,9 @@
 
 :root {
   --primary-color: white;
-  --secondary-color: #636364;
+  --secondary-color: #707072;
   --third-color: #27E88C;
-  --background-color: #121215;
+  --background-color: #1e1e23;
   --third-color2: #56e8a23d;
 
 
@@ -53,8 +53,8 @@ label {
 
 .profilepic {
   margin: 12% 0;
-  width: 100%;
-  border-radius: 10px;
+  width: 380px;
+  border-radius: 20px;
 }
 
 ul {
